@@ -18,6 +18,7 @@ import de.caritas.cob.agencyservice.api.model.AgencyTypeRequestDTO;
 import de.caritas.cob.agencyservice.api.model.UpdateAgencyDTO;
 import de.caritas.cob.agencyservice.api.repository.agency.Agency;
 import de.caritas.cob.agencyservice.api.repository.agency.AgencyRepository;
+import de.caritas.cob.agencyservice.api.repository.agency.AgencyTenantUnawareRepository;
 import de.caritas.cob.agencyservice.api.repository.agencytopic.AgencyTopic;
 import de.caritas.cob.agencyservice.api.service.AppointmentService;
 import de.caritas.cob.agencyservice.api.tenant.TenantContext;
@@ -40,6 +41,9 @@ import org.springframework.stereotype.Service;
 public class AgencyAdminService {
 
   private final @NonNull AgencyRepository agencyRepository;
+
+  private final @NonNull AgencyTenantUnawareRepository agencyTenantUnawareRepository;
+
   private final @NonNull UserAdminService userAdminService;
   private final @NonNull DeleteAgencyValidator deleteAgencyValidator;
   private final @NonNull AgencyTopicMergeService agencyTopicMergeService;
@@ -110,8 +114,7 @@ public class AgencyAdminService {
   }
 
   private List<AgencyDTO.CounsellingRelationsEnum> getAllPossibleCounsellingRelations() {
-    return Arrays.stream(AgencyDTO.CounsellingRelationsEnum.values())
-        .collect(Collectors.toList());
+    return Arrays.stream(AgencyDTO.CounsellingRelationsEnum.values()).toList();
 
   }
 
@@ -125,7 +128,6 @@ public class AgencyAdminService {
   private Agency fromAgencyDTO(AgencyDTO agencyDTO) {
 
     var agencyBuilder = Agency.builder()
-        .dioceseId(agencyDTO.getDioceseId())
         .name(agencyDTO.getName())
         .description(agencyDTO.getDescription())
         .postCode(agencyDTO.getPostcode())
@@ -183,6 +185,7 @@ public class AgencyAdminService {
     var updatedAgency = agencyRepository.save(mergeAgencies(agency, updateAgencyDTO));
     enrichWithAgencyTopicsIfTopicFeatureEnabled(updatedAgency);
     this.appointmentService.syncAgencyDataToAppointmentService(updatedAgency);
+    agencyRepository.flush();
     return new AgencyAdminFullResponseDTOBuilder(updatedAgency)
         .fromAgency();
   }
@@ -191,7 +194,6 @@ public class AgencyAdminService {
 
     var agencyBuilder = Agency.builder()
         .id(agency.getId())
-        .dioceseId(updateAgencyDTO.getDioceseId())
         .name(updateAgencyDTO.getName())
         .description(updateAgencyDTO.getDescription())
         .postCode(updateAgencyDTO.getPostcode())
@@ -263,5 +265,9 @@ public class AgencyAdminService {
     agency.setDeleteDate(LocalDateTime.now(ZoneOffset.UTC));
     this.agencyRepository.save(agency);
     this.appointmentService.deleteAgency(agency);
+  }
+
+  public List<Agency> getAgenciesByTenantId(Long tenantId) {
+    return this.agencyTenantUnawareRepository.findByTenantId(tenantId);
   }
 }
